--- a/ClipboardAutoProcessor.csproj
+++ b/ClipboardAutoProcessor.csproj
@@ -56,13 +56,13 @@
     <Compile Include="FormMain.Designer.cs">
       <DependentUpon>FormMain.cs</DependentUpon>
     </Compile>
-    <Compile Include="DataStructure\HistoryState.cs" />
+    <Compile Include="DataStructure\HistoryOperationItem.cs" />
     <Compile Include="I18n.cs" />
     <Compile Include="DataStructure\ApplicationConfig.cs" />
-    <Compile Include="DataStructure\ProcessorScript.cs" />
+    <Compile Include="DataStructure\ScriptFileItem.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="DataStructure\ScriptInterpreterConfig.cs" />
+    <Compile Include="DataStructure\ScriptInterpreterItem.cs" />
     <EmbeddedResource Include="FormMain.resx">
       <DependentUpon>FormMain.cs</DependentUpon>
     </EmbeddedResource>
