--- a/ClipboardAutoProcessor.csproj
+++ b/ClipboardAutoProcessor.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DataStructure\ScriptInterpreterItem.cs" />
+    <Compile Include="Util\ScriptUtil.cs" />
     <Compile Include="Util\StringUtil.cs" />
     <EmbeddedResource Include="FormMain.resx">
       <DependentUpon>FormMain.cs</DependentUpon>
