--- a/packages.config
+++ b/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="NGettext" version="0.6.3" targetFramework="net472" />
+  <package id="SharpClipboard" version="3.5.0" targetFramework="net472" />
 </packages>
