Replaced ini-parser with MadMilkman.Ini to allow using duplicated section name "scriptInterpreter"

--- a/packages.config
+++ b/packages.config
@@ -2,7 +2,7 @@
 <packages>
   <package id="Costura.Fody" version="3.3.2" targetFramework="net472" />
   <package id="Fody" version="3.3.5" targetFramework="net472" developmentDependency="true" />
-  <package id="ini-parser" version="2.5.2" targetFramework="net472" />
+  <package id="MadMilkman.Ini" version="1.0.6.0" targetFramework="net472" />
   <package id="NGettext" version="0.6.3" targetFramework="net472" />
   <package id="SharpClipboard" version="3.5.0" targetFramework="net472" />
 </packages>
